Bug 1719046 - Unlock nsSocketTransportService::mLock while creating PollableEvent r=necko-reviewers,jesup

The PollableEvent constructor may hang in PR_NewTCPSocketPair.
If it holds the lock while hanging, it will also block the main thread.

This patch unlocks the mutex while creating the pollable event.
The socket thread will still be slow to respond. A follow-up  bug will
explore potential options to avoid the socket thread hang.

Differential Revision: https://phabricator.services.mozilla.com/D213207