netwerk/base/nsSocketTransportService2.cpp
@@ -1855,8 +1855,17 @@ void nsSocketTransportService::EndPolling() {
 void nsSocketTransportService::TryRepairPollableEvent() {
   mLock.AssertCurrentThreadOwns();
 
+  PollableEvent* pollable = nullptr;
+  {
+    // Bug 1719046: In certain cases PollableEvent constructor can hang
+    // when callign PR_NewTCPSocketPair.
+    // We unlock the mutex to prevent main thread hangs acquiring the lock.
+    MutexAutoUnlock unlock(mLock);
+    pollable = new PollableEvent();
+  }
+
   NS_WARNING("Trying to repair mPollableEvent");
-  mPollableEvent.reset(new PollableEvent());
+  mPollableEvent.reset(pollable);
   if (!mPollableEvent->Valid()) {
     mPollableEvent = nullptr;
   }
